<resources>
    <string name="app_name">Shureader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario">usuario</string>
    <string name="contrase_a">  contraseña</string>
    <string name="conectar">conectar</string>
    <string name="olvidaste_la_contrase_a">olvidaste la contraseña?</string>
    <string name="conectando">conectando</string>
    <string name="correctData">datos correctos</string>
    <string name="incorrectUserPassword">usuario o contraseña incorrectos</string>
    <string name="connectionError">error de conexión</string>
    <string name="connecting">conectando</string>
    <string name="emptyUserPassword">usuario y contraseña vacíos</string>
    <string name="invalidUserPassword">usuario y contraseña no válidos</string>
    <string name="emptyUser">usuario vacío</string>
    <string name="invalidUser">usuario no válido</string>
    <string name="emptyPassword">contraseña vacía</string>
    <string name="invalidPassword">contraseña no válida</string>
    <string name="no_results">No hay resultados que mostrar</string>
    <string name="image">image</string>
    <string name="drawer_open">1</string>
    <string name="drawer_close">1</string>
    <string name="buscar">Buscar</string>
    <string name="nopermission">Hilo privado. Loguéate o consigue una invitación.</string>

</resources>
